fix: fix button overflow

--- a/elyreacts/src/components/styles/Header.module.scss
+++ b/elyreacts/src/components/styles/Header.module.scss
@@ -196,6 +196,7 @@ header.wrapper .container .menu {
             display: flex;
             align-items: center;
             justify-content: space-around;
+            flex-wrap: wrap;
 
             & > * {
                 padding: 0.5rem;
